name: bloodhound
version: 0.16.0.0
cabal-version: >=2.0
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2018 Chris Allen
maintainer: cma@bitemyapp.com
homepage: https://github.com/bitemyapp/bloodhound
synopsis: Elasticsearch client library for Haskell
description:
    Elasticsearch made awesome for Haskell hackers
category: Database, Search
author: Chris Allen
extra-source-files:
    README.md
    changelog.md

source-repository head
    type: git
    location: https://github.com/danidiaz/bloodhound.git

library bloodhound-import
    exposed-modules:
        Bloodhound.Import 
    build-depends:
        pindeps,
        base,
        bytestring,
        containers,
        aeson,
        http-client,
        network-uri,
        semigroups,
        time,
        text,
        mtl,
        transformers,
        http-types,
        vector,
        scientific,
        blaze-builder,
        exceptions,
        hashable,
        unordered-containers
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

library
    exposed-modules:
        Database.V1.Bloodhound
        Database.V1.Bloodhound.Client
        Database.V1.Bloodhound.Types
        Database.V1.Bloodhound.Types.Class
        Database.V1.Bloodhound.Internal.Aggregation
        Database.V1.Bloodhound.Internal.Client
        Database.V1.Bloodhound.Internal.Highlight
        Database.V1.Bloodhound.Internal.Newtypes
        Database.V1.Bloodhound.Internal.Query
        Database.V1.Bloodhound.Internal.Sort
        Database.V1.Bloodhound.Internal.StringlyTyped
        Database.V1.Bloodhound.Internal.Suggest
    reexported-modules:
          Database.V5.Bloodhound
        , Database.V5.Bloodhound.Client
        , Database.V5.Bloodhound.Types
        , Database.V5.Bloodhound.Types.Class
        , Database.V5.Bloodhound.Internal.Aggregation
        , Database.V5.Bloodhound.Internal.Analysis
        , Database.V5.Bloodhound.Internal.Client
        , Database.V5.Bloodhound.Internal.Highlight
        , Database.V5.Bloodhound.Internal.Newtypes
        , Database.V5.Bloodhound.Internal.Query
        , Database.V5.Bloodhound.Internal.Sort
        , Database.V5.Bloodhound.Internal.StringlyTyped
        , Database.V5.Bloodhound.Internal.Suggest
    build-depends:
        pindeps,
        base,
        bytestring,
        containers,
        aeson,
        http-client,
        network-uri,
        semigroups,
        time,
        text,
        mtl,
        transformers,
        http-types,
        vector,
        scientific,
        blaze-builder,
        exceptions,
        hashable,
        unordered-containers,
        bloodhound-import,
        v5-abstract
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

library v5ab-aggregation-impls
    exposed-modules:
          Database.V5A.Bloodhound.Internal.Aggregation
          Database.V5B.Bloodhound.Internal.Aggregation
    build-depends:
        pindeps,
        base,
        bytestring,
        containers,
        aeson,
        http-client,
        network-uri,
        semigroups,
        time,
        text,
        mtl,
        transformers,
        http-types,
        vector,
        scientific,
        blaze-builder,
        exceptions,
        hashable,
        unordered-containers,
        bloodhound-import,
        v5-internal-minus-aggregation
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

library v5-abstract
    exposed-modules:
        Database.V5.Bloodhound
        Database.V5.Bloodhound.Client
        Database.V5.Bloodhound.Types
        Database.V5.Bloodhound.Types.Class
        Database.V5.Bloodhound.Internal.Aggregation
    reexported-modules:
          Database.V5.Bloodhound.Internal.Analysis
        , Database.V5.Bloodhound.Internal.Client
        , Database.V5.Bloodhound.Internal.Highlight
        , Database.V5.Bloodhound.Internal.Newtypes
        , Database.V5.Bloodhound.Internal.Query
        , Database.V5.Bloodhound.Internal.Sort
        , Database.V5.Bloodhound.Internal.StringlyTyped
        , Database.V5.Bloodhound.Internal.Suggest
    build-depends:
        pindeps,
        base,
        bytestring,
        containers,
        aeson,
        http-client,
        network-uri,
        semigroups,
        time,
        text,
        mtl,
        transformers,
        http-types,
        vector,
        scientific,
        blaze-builder,
        exceptions,
        hashable,
        unordered-containers,
        bloodhound-import,
        v5-internal-minus-aggregation
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall


library v5-internal-minus-aggregation
    exposed-modules:
        Database.V5.Bloodhound.Internal.Analysis
        Database.V5.Bloodhound.Internal.Client
        Database.V5.Bloodhound.Internal.Highlight
        Database.V5.Bloodhound.Internal.Newtypes
        Database.V5.Bloodhound.Internal.Query
        Database.V5.Bloodhound.Internal.Sort
        Database.V5.Bloodhound.Internal.StringlyTyped
        Database.V5.Bloodhound.Internal.Suggest
    other-modules:
        Database.Bloodhound.Common.Script
    build-depends:
        pindeps,
        base,
        bytestring,
        containers,
        aeson,
        http-client,
        network-uri,
        semigroups,
        time,
        text,
        mtl,
        transformers,
        http-types,
        vector,
        scientific,
        blaze-builder,
        exceptions,
        hashable,
        unordered-containers,
        bloodhound-import
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

library pindeps
    build-depends:
        base >=4.3 && <5,
        bytestring >=0.10.0 && <0.11,
        containers >=0.5.0.0 && <0.6,
        aeson >=0.11.1 && <1.4,
        http-client >=0.4.30 && <0.6,
        network-uri ==2.6.*,
        semigroups >=0.15 && <0.19,
        time >=1.4 && <1.9,
        text >=0.11 && <1.3,
        mtl >=1.0 && <2.3,
        transformers >=0.2 && <0.6,
        http-types >=0.8 && <0.13,
        vector >=0.10.9 && <0.13,
        scientific >=0.3.0.0 && <0.4.0.0,
        blaze-builder >=0.4.0.2 && <0.5,
        exceptions >=0.8.3 && <0.9,
        hashable >=1.2.7.0 && <1.3,
        unordered-containers >=0.2.9.0 && <0.3
    default-language: Haskell2010
    ghc-options: -Wall

